# SPDX-FileCopyrightText: 2025 Voyager Technologies, Inc.
#
# SPDX-License-Identifier: MIT

[package]
name = "caas-executor"
version = "0.1.0-11"
edition = "2021"
authors = ["Stephanie Stites <stephanie.stites@voyagertechnologies.com>", "John Moon <john.moon@voyagertechnologies.com>"]
description = "Compression as a Service Executor"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = {version = "0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
ctrlc = { version = "3", features = ["termination"] }
env_logger = "0"
log = "0"
reqwest = { version = "0" }
serde = { version = "1", features = ["derive"] }
sha1_smol = { version = "1", features = ["std"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
threadpool = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
once_cell = "1.21.3"
